--- a/css/main.css
+++ b/css/main.css
@@ -110,11 +110,11 @@ a{
     border: none;
     border-radius: 4px;
     color: gray;
-    font-size: 24px;
-    left: 670px;
+    font-size: 16px;
+    left: 652px;
     outline: none;
     position: absolute;
-    top: 15px;
+    bottom: 35px;
 }
 
 .deleteButton:hover{
