--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,6 +109,24 @@ a{
     color: red;
 }
 
+.previewButton{
+    background-color: rgb(50, 50, 50);
+    border: none;
+    border-radius: 4px;
+    bottom: 30px;
+    color: gray;
+    font-size: 24px;
+    left: 650px;
+    outline: none;
+    position: absolute;
+    transition: .2s linear;
+}
+
+.previewButton:hover{
+    color: rgb(94, 94, 245);
+    
+}
+
 .deleteButton{
     background-color: rgb(50, 50, 50);
     border: none;
