--- a/assets/css/searchWindow.css
+++ b/assets/css/searchWindow.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: rgb(33, 33, 33);
 }
 
@@ -12,7 +12,7 @@ div.container {
     text-align: center;
 }
 
-input[type=text]{
+input[type="text"] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -23,13 +23,13 @@ input[type=text]{
     font-size: 18px;
 }
 
-input[type=checkbox]{
+input[type="checkbox"] {
     width: 100%;
     margin: 30px 0 30px 0;
     transform: scale(4);
 }
 
-input[type=submit]{
+input[type="submit"] {
     background-color: rgb(179, 179, 179);
     border: none;
     border-radius: 4px;
@@ -39,14 +39,14 @@ input[type=submit]{
     margin: 4px 0;
     padding: 7px 10px;
     text-align: center;
-    transition: .1s linear;
+    transition: 0.1s linear;
     width: 50%;
 }
 
-#searchBtn:hover{
+#searchBtn:hover {
     background-color: rgb(29, 185, 84);
 }
 
-#cancelBtn:hover{
+#cancelBtn:hover {
     background-color: rgb(255, 17, 0);
 }
